<resources>
    <string name="app_name">Mercury</string>
    <string name="connection">Connection</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="connected_server">Connected Server:</string>
    <string name="connection_status">Connection Status:</string>
    <string name="connected">Connected</string>
    <string name="change_server">Change Server</string>
    <string name="server_name">Server Name</string>
    <string name="connect">connect</string>
</resources>
