<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".UI.ConnectionFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/hermes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/app_name"
        android:textColor="@color/primaryBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/ConnectionStatusImageView"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/connectedServerTag"
        style="@style/SmallLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/connected_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        style="@style/SmallLabel"
        android:layout_marginStart="8dp"
        android:text="wss://www.lorews.com"
        android:textColor="@color/accentPurple"
        app:layout_constraintBottom_toBottomOf="@+id/connectedServerTag"
        app:layout_constraintStart_toEndOf="@+id/connectedServerTag"
        app:layout_constraintTop_toTopOf="@+id/connectedServerTag" />

    <TextView
        android:id="@+id/connectionStatusTag"
        style="@style/SmallLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/connection_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedServerTag" />

    <TextView
        style="@style/SmallLabel"
        android:layout_marginStart="8dp"
        android:text="@string/connected"
        android:textColor="@color/connectionGreen"
        app:layout_constraintBottom_toBottomOf="@+id/connectionStatusTag"
        app:layout_constraintStart_toEndOf="@+id/connectionStatusTag"
        app:layout_constraintTop_toTopOf="@+id/connectionStatusTag" />

    <TextView
        android:id="@+id/changeServerLabel"
        style="@style/MediumLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20sp"
        android:text="@string/change_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatusTag" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxStrokeColor="@color/edit_text_outline_selector"
        app:boxStrokeWidth="1dp"
        android:hint="@string/server_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeServerLabel">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/BaseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_height="56dp"
        android:layout_width="240dp"
        android:layout_marginBottom="32dp"
        android:text="@string/connect"
        android:textSize="12sp"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/accentPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>